[project]
name = "cz-sumologic-adapter"
version = "0.1.0"
description = "SumoLogic to CloudZero billing data adapter"
requires-python = ">=3.10"
dependencies = [
    "pandas==2.3.2",
    "requests==2.32.4",
]


[dependency-groups]
dev = [
    "freezegun>=1.5.5",
    "poethepoet>=0.29.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "responses>=0.25.8",
    "ruff>=0.1.0",
]

[tool.poe.tasks]
run = "uv run test_execute.sh"
type-check = "python -m py_compile sumo_anycost_lambda.py"
lint = "ruff check sumo_anycost_lambda.py"
format = "ruff format sumo_anycost_lambda.py"
check = "ruff check --fix sumo_anycost_lambda.py"
requirements = { shell = "uv export --no-hashes --no-dev > requirements.txt" }
test = { shell = "PYTHONPATH=. uv run pytest tests/ -v" }
test-cov = { shell = "PYTHONPATH=. uv run pytest tests/ -v --cov=sumo_anycost_lambda --cov-report=html --cov-report=term" }
test-unit = { shell = "PYTHONPATH=. uv run pytest tests/unit/ -v" }
test-integration = { shell = "PYTHONPATH=. uv run pytest tests/integration/ -v" }
